se agregaron inputs al form crear

--- a/views/template/create-prop.ejs
+++ b/views/template/create-prop.ejs
@@ -1,6 +1,7 @@
-<form method="POST"  enctype="multipart/form-data">
+<form method="POST" enctype="multipart/form-data" id="form-principal">
     <div class="input-group mb-3">
-        <input type="text" class="form-control" placeholder="Titulo propiedad" aria-label="Tituloprop" name="titulo">
+        <input type="text" class="form-control" placeholder="Titulo propiedad" aria-label="Tituloprop"
+            name="titulo">
     </div>
 
     <div class="input-group mb-3">
@@ -25,30 +26,101 @@
         <input type="text" class="form-control" aria-label="Text input with dropdown button">
     </div>
     <h4 class="text-center">Caracteristicas de la propiedad</h4>
-    <div class="input-group mb-3">
+    <div class="input-group mb-3 d-flex flex-wrap">
         <div class="input-group-text">
-            <input class="form-check-input mt-0" type="checkbox" value=""
+            <label class="m-1" for="">Zona</label>
+            <input id="zona-form" class="form-check-input mt-0" type="checkbox" value=""
                 aria-label="Checkbox for following text input">
         </div>
         <input type="text" class="form-control" aria-label="Text input with checkbox">
+
         <div class="input-group-text">
-            <input class="form-check-input mt-0" type="checkbox" value=""
+            <label class="m-1" for="">Superficie total</label>
+            <input id="superficie-total" class="form-check-input mt-0" type="checkbox" value=""
                 aria-label="Checkbox for following text input">
         </div>
         <input type="text" class="form-control" aria-label="Text input with checkbox">
+
         <div class="input-group-text">
-            <input class="form-check-input mt-0" type="checkbox" value=""
+            <label class="m-1" for="">Suerficie total cubierta</label>
+            <input id="superfice-cubierta" class="form-check-input mt-0" type="checkbox" value=""
                 aria-label="Checkbox for following text input">
         </div>
         <input type="text" class="form-control" aria-label="Text input with checkbox">
+
         <div class="input-group-text">
-            <input class="form-check-input mt-0" type="checkbox" value=""
+            <label class="m-1" for="">Ambientes</label>
+            <input id="ambientes-form" class="form-check-input mt-0" type="checkbox" value=""
                 aria-label="Checkbox for following text input">
         </div>
         <input type="text" class="form-control" aria-label="Text input with checkbox">
+
         <div class="input-group-text">
-            <span class="m-1">Balcon</span>
-            <input class="form-check-input mt-0" name="balcon" type="checkbox" value="">
+            <label class="m-1" for="">Valor</label>
+            <input id="valor-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1" for="">Tio de vista</label>
+            <input id="tipo-vista-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1" for="">Diposicion</label>
+            <input id="disposicion-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1" for="">Baños</label>
+            <input id="banios-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1" for="">Operacion</label>
+            <input id="operacion-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1" for="">Foma de pago</label>
+            <input id="metodo-pago-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1" for="">Direccion</label>
+            <input id="direccion-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1" for="">Domitorios</label>
+            <input id="dormitorios-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1" for="">Tipo de propiedad</label>
+            <input id="tipo-propiedad-form" class="form-check-input mt-0" type="checkbox" value=""
+                aria-label="Checkbox for following text input">
+        </div>
+        <input type="text" class="form-control" aria-label="Text input with checkbox">
+
+        <div class="input-group-text">
+            <label class="m-1">Balcon</label>
+            <input id="balcon-form" class="form-check-input mt-0" name="balcon" type="checkbox" value="">
         </div>
     </div>
 
