se agrego opcion para subir multiples fotos y se corrigio vista admin

--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -20,7 +20,7 @@
             </div>
             <div class="col-md-10 bg bg-custom-main">
                 <div class="row text-center">
-                    <h4 class="mt-1">Bienvenido JuanInmo</h4>
+                    <h4 class="mt-1">Bienvenido <%= title%></h4>
                 </div>
                 <div class="row text-center">
                     <h5>Gestor de propiedades</h5>
