--- a/views/template/preview-props.ejs
+++ b/views/template/preview-props.ejs
@@ -1,7 +1,7 @@
 <% propiedades.forEach(propiedad=> { %>
     <div class="col-md-4 mb-3 d-flex align-items-stretch">
         <div class="card">
-            <img src="<%= propiedad.imagen %>" class="card-img-top" alt="Card Image">
+            <img src="<%= propiedad.imagen[0] %>" class="card-img-top" alt="Card Image">
             <div class="card-body d-flex flex-column">
                 <h5 class="card-title">
                     <%= propiedad.titulo %>
